# chatgpt-cli-rust

./: Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md
src/: config.rs  evaluator.rs  history.rs  main.rs  message.rs  messages.rs  openai.rs  repl.rs  say.rs  set_api_key_prompt.rs  tokenizer.rs
