[package]
name = "chatgpt-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-openai = "0.9.4"
clap = { version = "4.1.8", features = ["derive"] }
getopts = "0.2.21"
rustyline = "11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spinoff = "0.6.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"