[package]
name = "chatgpt-repl"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-openai = "0.21.0"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
spinoff = "0.8.0"
stream-cancel = "0.8.2"
tiktoken-rs = "0.5.9"
